--- a/ui/map.css
+++ b/ui/map.css
@@ -53,7 +53,7 @@ td {
     min-width: 60px;
     width: 60px;
     height: 60px;
-    background: pink;
+    background: #f0f0f0;
     text-align: center;
 }
 
