Implement functionality to set points for a pub

--- a/ui/map.css
+++ b/ui/map.css
@@ -74,3 +74,24 @@ td {
 .list-text {
     line-height: 60px;
 }
+
+#pub-container {
+    padding: 20px;
+}
+
+.info {
+    padding: 20px 0;
+}
+
+.visit-ok {
+    background: chocolate;
+}
+
+.visit-good {
+    background: saddlebrown;
+    color: white;
+}
+
+.visit-bad {
+    background: orangered;
+}
