--- a/ui/map.css
+++ b/ui/map.css
@@ -14,6 +14,10 @@ body {
     display: flex;
 }
 
+h2 {
+    margin: 16px 0 8px 0;
+}
+
 .nav {
     height: 40px;
     min-height: 40px;
@@ -102,7 +106,7 @@ td:hover {
 }
 
 .info {
-    padding: 20px 0;
+    padding-bottom: 20px;
 }
 
 .visit-ok {
