--- a/ui/map.css
+++ b/ui/map.css
@@ -70,6 +70,7 @@ td {
     background: #f0f0f0;
     text-align: center;
     cursor: pointer;
+    font-size: 0.9em;
 }
 
 td:hover {
@@ -143,4 +144,9 @@ td:hover {
 
 .submitted {
     background-image: linear-gradient(225deg, limegreen, limegreen 10px, transparent 10px, transparent);
+}
+
+.visited {
+    font-weight: bold;
+    font-size: 1.2em;
 }
