Add map layer for most-visited pubs

--- a/ui/popup.css
+++ b/ui/popup.css
@@ -40,3 +40,10 @@
 .ol-popup-closer:after {
     content: "✖";
 }
+#popup-link {
+    color: blue;
+    cursor: pointer;
+}
+#popup-link:hover {
+    opacity: 0.5;
+}
